--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
   draggable_scrollbar: ^0.1.0
   toggle_switch: ^1.3.0
   community_material_icon: ^5.9.55
-  # native_pdf_renderer: ^4.0.1
-  pdfx: ^2.0.1+2
+  native_pdf_renderer: ^4.0.1
+  # pdfx: ^2.0.1+2
   equatable: ^2.0.3
   freezed_annotation: ^2.0.3
   json_annotation: ^4.5.0
