--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   freezed_annotation: ^2.0.3
   json_annotation: ^4.5.0
   flutter_widget_from_html_core: ^0.8.4
+  pdf_render: ^1.1.0
   # path_provider: ^2.0.8
   # path: ^1.8.0
   # equatable: ^2.0.3
