--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,11 @@ dependencies:
   toggle_switch: ^1.3.0
   community_material_icon: ^5.9.55
   native_pdf_renderer: ^4.0.1
-  # pdfx: ^2.0.1+2
   equatable: ^2.0.3
   freezed_annotation: ^2.0.3
   json_annotation: ^4.5.0
   flutter_widget_from_html_core: ^0.8.4
-  pdf_render: ^1.1.0
+  # pdf_render: ^1.1.0
   # path_provider: ^2.0.8
   # path: ^1.8.0
   # equatable: ^2.0.3
